addons/ELK-stack-K8s/k8s-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk-stack
  labels:
    app: kibana
spec:
  ports:
    - port: 80
      targetPort: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elk-stack
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.8.0
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/kibana/config/kibana.yml
              subPath: kibana.yml
              readOnly: true
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 200m
          ports:
            - containerPort: 5601
      volumes:
        - name: pipeline
          configMap:
            name: kibana-config
            items:
              - key: kibana.yml
                path: kibana.yml
