addons/ELK-stack-K8s/k8s-ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elk-stack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url : "true"
    #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: kibana-es.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        #pathType: ImplementationSpecific
        backend:
          service:
            name: kibana
            port:
              number: 80
